# rabbitmq-server

./: .gitignore  MODULE.bazel  WORKSPACE.bazel  rabbitmq.bzl  workspace_helpers.bzl
.github/workflows/: oci.yaml  perform-bazel-execution-comparison.yaml  rabbitmq_peer_discovery_aws.yaml  test-erlang-git.yaml  test-mixed-versions.yaml  test.yaml  update-otp-for-oci.yaml  update-rbe-images.yaml  update-rules_erlang.yaml
