module(
    name = "rabbitmq-server",
    version = "3.10.0",
)

bazel_dep(name = "rules_erlang", version = "2.4.0")

local_path_override(
    module_name = "rules_erlang",
    path = "../rules_erlang",
)

erlang_package = use_extension(
    "@rules_erlang//bzlmod:extensions.bzl",
    "erlang_package",
)

erlang_package.git(
    repository = "extend/ct_helper",
    branch = "master",
)

erlang_package.hex(
    name = "cuttlefish",
    version = "3.0.1",
)

erlang_package.hex(
    name = "eetcd",
    version = "0.3.3",
)

erlang_package.hex(
    name = "jsx",
    version = "3.1.0",
)

erlang_package.git(
    name = "prometheus",
    repository = "deadtrickster/prometheus.erl",
    commit = "06425c21a39c1564164f1cc3fe5bdfa8b23b1f78",
    build_file_content = """load("@rules_erlang//:erlang_app.bzl", "erlang_app")

erlang_app(
    app_name = "syslog",
    first_srcs = [
        "src/prometheus_collector.erl",
        "src/prometheus_format.erl",
        "src/prometheus_instrumenter.erl",
        "src/prometheus_metric.erl",
    ],
    deps = [
        "@quantile_estimator//:erlang_app",
    ],
)
""",
)

erlang_package.hex(
    name = "stdout_formatter",
    version = "0.2.4",
)

erlang_package.git(
    repository = "schlagert/syslog",
    tag = "4.0.0",
    build_file_content = """load("@rules_erlang//:erlang_app.bzl", "erlang_app")

erlang_app(
    app_name = "syslog",
    first_srcs = [
        "src/syslog_logger.erl",
    ],
)
""",
)

# erlang_package.hex(
#     name = "aten",
#     version = "0.5.7",
# )

# erlang_package.hex(
#     name = "gen_batch_server",
#     version = "0.8.7",
# )

# erlang_package.git(
#     name = "inet_tcp_proxy_dist",
#     repository = "rabbitmq/inet_tcp_proxy",
#     branch = "master",
# )

# erlang_package.git(
#     repository = "eproxus/meck",
#     branch = "master",
# )

# erlang_package.git(
#     repository = "manopapad/proper",
#     branch = "master",
#     build_file_content = """load("@rules_erlang//:erlang_app.bzl", "erlang_app")

# erlang_app(
#     app_name = "proper",
#     first_srcs = [
#         "src/vararg.erl",
#         "src/proper_target.erl",
#     ],
# )
# """,
# )

use_repo(
    erlang_package,
    "cuttlefish",
    "eetcd",
    "jsx",
    "prometheus",
    "stdout_formatter",
    "syslog",
)
